# SkeletonOS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  main.c  main.h  makefile
arch-arm/: rp2040.c
arch-linux/: linux.c
skeleton/: CMakeCache.txt  CMakeLists.txt  Makefile  cbuf.c  cmake_install.cmake  config.c  fs.c  json.c  logger.c  main-arm.c  main-linux.c  main.c  math.c  scheduler.c  timestamp.c  uuid4.c
skeleton/arch-arm/: pioSerial.c  pioSerial.h  rp2040.c
skeleton/arch-arm/drivers/FatFs_SPI/include/: my_debug.h
skeleton/arch-arm/drivers/FatFs_SPI/sd_driver/: hw_config.c  sd_spi.c  spi.c  spi.h
skeleton/arch-arm/drivers/esp32/: CMakeLists.txt  esp32.c
skeleton/arch-arm/drivers/esp32/include/: esp32.h
skeleton/arch-arm/drivers/pioSerial/: CMakeLists.txt
skeleton/arch-arm/rp2040/: boards.h
skeleton/arch-linux/: linux.c
skeleton/blink/: Makefile  blink.dis  blink.uf2  cmake_install.cmake
skeleton/blink/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt
skeleton/config/: cmake.h.in
skeleton/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
skeleton/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
skeleton/include/: arch.h  cbuf.h  config.h  dsp.h  fs.h  logger.h  main.h  scheduler.h  timestamp.h  uuid4.h
skeleton/pico-sdk/: Makefile  cmake_install.cmake
skeleton/pico-sdk/docs/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_usb_reset_interface/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/boot_stage2/: Makefile  bs2_default.dis  bs2_default_padded_checksummed.S  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_claim/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_flash/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_gpio/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_i2c/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_irq/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_pio/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_pwm/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_resets/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_rtc/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_spi/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_sync/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_timer/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_uart/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_vreg/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_watchdog/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/hardware_xosc/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_bit_ops/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_bootrom/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_bootsel_via_double_reset/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_cxx_options/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_divider/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_double/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_fix/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_float/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_int64_ops/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_malloc/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_mem_ops/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_multicore/: Makefile  cmake_install.cmake
skeleton/pico-sdk/src/rp2_common/pico_platform/: Makefile  cmake_install.cmake
skeleton/pico-sdk/tools/: Makefile  cmake_install.cmake
skeleton/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
skeleton/skeleton/: Makefile  cmake_install.cmake
skeleton/src/: config.c  fs.c  json.c  logger.c  main.c  scheduler.c
(+48 files in other folders)
